--- a/app/views/components/awards.hbs
+++ b/app/views/components/awards.hbs
@@ -1,6 +1,6 @@
 {{#if resume.awards.length}}
-<div class="container awards-container">
-  {{> title value="Awards"}}
+<div class="w3-container w3-card w3-white w3-margin-bottom awards-container">
+  {{> title value="Awards" icon="trophy"}}
 
   {{#each resume.awards}}
     <section class="item">
