--- a/app/views/components/languages.hbs
+++ b/app/views/components/languages.hbs
@@ -1,6 +1,6 @@
 {{#if resume.languages.length}}
-<div class="container languages-container">
-  {{> title value="Languages"}}
+<div class="w3-container w3-card w3-white w3-margin-bottom languages-container">
+  {{> title value="Languages" icon="language"}}
 
   <ul class="minimal">
     {{#each resume.languages}}
