--- a/app/views/components/publications.hbs
+++ b/app/views/components/publications.hbs
@@ -1,5 +1,5 @@
 {{#if resume.publications.length}}
-<div class="container publications-container">
+<div class="w3-container w3-card w3-white w3-margin-bottom publications-container">
   {{> title value="Publications"}}
 
   {{#each resume.publications}}
