--- a/app/views/components/volunteer.hbs
+++ b/app/views/components/volunteer.hbs
@@ -1,5 +1,5 @@
 {{#if resume.volunteer.length}}
-<div class="container volunteer-container">
+<div class="w3-container w3-card w3-white w3-margin-bottom volunteer-container">
   {{> title value="Volunteer"}}
 
   {{#each resume.volunteer}}
