--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,18 +1,95 @@
-/* Utils */
-@import 'utils/variables';
-@import 'utils/mixins';
-@import 'utils/functions';
+///* Utils */
+//@import 'utils/variables';
+//@import 'utils/mixins';
+//@import 'utils/functions';
+//
+///* Base */
+//@import 'base/fonts';
+//@import 'base/base';
+//@import 'base/global';
+//
+///* Layouts */
+//@import 'layouts/page';
+//@import 'layouts/print';
+//
+///* Components */
+//@import 'components/info-tag';
+//@import 'components/references';
+//@import 'components/education';
 
-/* Base */
-@import 'base/fonts';
-@import 'base/base';
-@import 'base/global';
+html, body {
+  font-size: 9px;
+  line-height: 1.3;
+}
 
-/* Layouts */
-@import 'layouts/page';
-@import 'layouts/print';
+.w3-row-padding>.w3-third {
+  padding: 0px 4px;
+}
+.w3-margin-bottom {
+  margin-bottom: 10px!important;
+}
 
-/* Components */
-@import 'components/info-tag';
-@import 'components/references';
-@import 'components/education';
+.w3-container, .w3-panel {
+  padding: 0em 7px;
+}
+
+h1 {
+  font-size: 16px
+}
+
+h2 {
+  font-size: 14px
+}
+
+h3 {
+  font-size: 12px
+}
+
+h4 {
+  font-size: 11px
+}
+
+h5 {
+  font-size: 10px
+}
+
+h6 {
+  font-size: 8px
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 3px 0 3px 6px;
+}
+
+hr {
+  margin: 4px 0;
+}
+
+.interests-container section.item {
+  display: inline-block;
+}
+
+.w3-large {
+  font-size: 13px !important;
+}
+
+
+.w3-margin-right {
+  margin-right: 9px!important;
+}
+
+h4.bold {
+  margin-left: 19px;
+}
+
+.ref-name {
+  margin-left: 15px;
+}
+
+p.summary, p.summary+p {
+  margin-left: 17px;
+}
+.resume-name{
+  font-size: 23px;
+  text-shadow: 3px -1px 3px #000;
+}
