--- a/app/views/components/education.hbs
+++ b/app/views/components/education.hbs
@@ -1,24 +1,19 @@
 {{#if resume.education.length}}
-<div class="container education-container">
-  {{> title value="Education"}} {{#each resume.education}}
+<div class="w3-container w3-card w3-white w3-margin-bottom education-container">
+  {{> title value="Education" icon="graduation-cap"}} {{#each resume.education}}
   <section class="item">
-    {{> section-header name=this.institution }}
+    {{> section-header header=(concat studyType " of " this.area) subheader=this.institution }}
     {{#if location}}
       <h5 class="location">{{location}}</h5>
     {{/if}}
 
-    <h4>{{#if studyType}}{{studyType}} {{/if}}{{#if area}}{{area}}{{/if}}</h4>
-
-    {{#if gpa}}
-      <h5>{{gpa}}</h5>
-    {{/if}}
     {{#if specialization}}
       <h5 class="specialization">{{specialization}}</h5>
     {{/if}}
     {{#if courses.length}}
       <ul class="two-column">
         {{#each courses}}
-        <li>{{.}}</li>
+        <li>{{{mdToHtml .}}}</li>
         {{/each}}
       </ul>
     {{/if}}
