--- a/app/views/components/interests.hbs
+++ b/app/views/components/interests.hbs
@@ -1,6 +1,6 @@
 {{#if resume.interests.length}}
-<div class="container interests-container">
-  {{> title value="Interests"}}
+<div class="w3-container w3-card w3-white w3-margin-bottom interests-container">
+  {{> title value="Interests" icon="heart"}}
 
   {{#each resume.interests}}
     <section class="item">
