--- a/app/views/components/summary.hbs
+++ b/app/views/components/summary.hbs
@@ -1,7 +1,7 @@
 {{#resume.basics}}
 {{#if summary}}
-<div class="container summary-container">
-  {{> title value="Summary"}}
+<div class="w3-container w3-card w3-white w3-margin-bottom summary-container">
+  {{> title value="Summary" icon="address-card"}}
   <p class="summary">
     {{summary}}
   </p>
