--- a/app/views/components/work.hbs
+++ b/app/views/components/work.hbs
@@ -1,27 +1,23 @@
 {{#if resume.work.length}}
-<div class="container work-container">
-  {{> title value="Experience"}}
-
+  <div class="w3-container w3-card w3-white w3-margin-bottom">
+    {{> title value="Experience" icon="suitcase"}}
   {{#each resume.work}}
-  <section class="item">
-    {{> section-header name=this.company }}
-
-    {{#if position}}
-      <h4>{{position}}</h4>
-    {{/if}}
-
-    {{#if summary}}
-      <p class="summary">{{summary}}</p>
-    {{/if}}
-
-    {{#if highlights.length}}
-      <ul>
-        {{#each highlights}}
-        <li>{{.}}</li>
-        {{/each}}
-      </ul>
-    {{/if}}
-  </section>
+    <div class="w3-container">
+      {{> section-header header=position subheader=company }}
+      {{#if summary}}
+        <p class="summary">{{{mdToHtml summary}}}</p>
+      {{/if}}
+      <section>
+        {{#if highlights.length}}
+          <ul>
+            {{#each highlights}}
+              <li>{{.}}</li>
+            {{/each}}
+          </ul>
+        {{/if}}
+      </section>
+      <hr>
+    </div>
   {{/each}}
-</div>
+  </div>
 {{/if}}
