--- a/app/views/partials/title.hbs
+++ b/app/views/partials/title.hbs
@@ -1,4 +1,1 @@
-<div class="title">
-  <h3>{{value}}</h3>
-  <div class="keyline"></div>
-</div>
+<h2 class="w3-text-grey"><i class="fa fa-{{icon}} fa-fw w3-margin-right w3-text-teal"></i>{{value}}</h2>
