--- a/app/views/components/about.hbs
+++ b/app/views/components/about.hbs
@@ -22,7 +22,7 @@
         <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="tel:{{phone}}">{{phone}}</a></p>
       {{/if}}
       {{#if websiteCaption}}
-        <p class="text-ellipsis"><i class="fa fa-globe fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="{{website}}">{{websiteCaption}}</a></p>
+        <p class="text-ellipsis"><i class="fa fa-globe fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="{{website}}" target="_blank">{{websiteCaption}}</a></p>
       {{/if}}
     </div>
   </div>
